--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,6 @@ if(MSVC)
     )
     target_compile_features(QuickerSFV PRIVATE cxx_std_23)
     target_compile_definitions(QuickerSFV PRIVATE UNICODE _UNICODE WIN32_LEAN_AND_MEAN NOMINMAX)
-    target_link_libraries(QuickerSFV PRIVATE UxTheme.lib quicker_sfv)
+    target_link_libraries(QuickerSFV PRIVATE UxTheme.lib Comctl32.lib quicker_sfv)
     set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT QuickerSFV)
 endif(MSVC)
