--- a/.gitattributes
+++ b/.gitattributes
@@ -11,14 +11,14 @@
 *.txt text
 *.svg text
 
-# Declare files that will always have CRLF line endings on checkout.
+# Visual Studio specific files
 *.sln text eol=crlf
 *.manifest.in binary
 *.rc text working-tree-encoding=UTF-16LE-BOM eol=crlf
 *.rc.in text working-tree-encoding=UTF-16LE-BOM eol=crlf
 resouce/resouce.h  text text eol=crlf
 
-# Denote all files that are truly binary and should not be modified.
+# Binary files
 *.png binary
 *.jpg binary
 *.ico binary
