--- a/resource/quicker_sfv.manifest.in
+++ b/resource/quicker_sfv.manifest.in
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <assembly xmlns="urn:schemas-microsoft-com:asm.v3" manifestVersion="1.0">
   <assemblyIdentity type="win32" version="@QUICKER_SFV_PROJECT_VERSION_MAJOR@.@QUICKER_SFV_PROJECT_VERSION_MINOR@.@QUICKER_SFV_PROJECT_VERSION_PATCH@.@QUICKER_SFV_PROJECT_VERSION_TWEAK@" name="QuickerSFV" />
+  <dependency>
+    <dependentAssembly>
+      <assemblyIdentity type="win32" name="Microsoft.Windows.Common-Controls" version="6.0.0.0" processorArchitecture="*" publicKeyToken="6595b64144ccf1df" language="*"/>
+    </dependentAssembly>
+  </dependency>
   <trustInfo>
     <security>
       <requestedPrivileges>
