--- a/plugin_sdk/quicker_sfv/plugin/plugin_sdk.h.in
+++ b/plugin_sdk/quicker_sfv/plugin/plugin_sdk.h.in
@@ -8,6 +8,9 @@
 #endif
 
 #include <quicker_sfv/plugin/interfaces.h>
+#ifdef __cplusplus
+#   include <quicker_sfv/plugin/cpp_interfaces.hpp>
+#endif
 
 typedef IQuickerSFV_ChecksumProvider* (*QuickerSFV_LoadPluginFunc)(QuickerSFV_ChecksumProvider_Callbacks*);
 
