--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ if(MSVC)
     if(QUICKER_SFV_BUILD_SELF_CONTAINED)
         set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
     endif()
-endif()
+else(MSVC)
+    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+endif(MSVC)
 
 if(MSVC)
     option(QUICKER_SFV_USE_BUNDLED_OPENSSL "Use the minimal bundled version of OpenSSL." OFF)
