documentation and unit tests for crc32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,7 @@ if(BUILD_TESTS)
         ${PROJECT_SOURCE_DIR}/test/test_digest.hpp
         PRIVATE
         ${PROJECT_SOURCE_DIR}/test/checksum_file.t.cpp
+        ${PROJECT_SOURCE_DIR}/test/crc32.t.cpp
         ${PROJECT_SOURCE_DIR}/test/fast_crc32.t.cpp
         ${PROJECT_SOURCE_DIR}/test/line_reader.t.cpp
         ${PROJECT_SOURCE_DIR}/test/utf.t.cpp
