string conversion docs and unit tests

--- a/external/catch2/CMakeLists.txt
+++ b/external/catch2/CMakeLists.txt
@@ -10,4 +10,5 @@ if(NOT EXISTS ${PROJECT_BINARY_DIR}/external/catch/catch.hpp)
     )
 endif()
 add_library(Catch2 STATIC ${PROJECT_SOURCE_DIR}/catch_main.cpp)
+target_compile_features(Catch2 PRIVATE cxx_std_20)
 target_include_directories(Catch2 PUBLIC ${PROJECT_BINARY_DIR}/external/catch)
