additional fuzz tests for crc digest and sfv file parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,8 +210,10 @@ if(BUILD_TESTS)
             target_link_libraries(quicker_sfv_fuzz_${test_name} PRIVATE quicker_sfv)
             target_link_options(quicker_sfv_fuzz_${test_name} PRIVATE -fsanitize=fuzzer)
         endfunction()
+        add_fuzz_test(crc_digest_parsing)
         add_fuzz_test(md5_digest_parsing)
         add_fuzz_test(md5_file_parsing)
+        add_fuzz_test(sfv_file_parsing)
     endif()
 endif()
 
