menu option for config saving

--- a/resource/quicker_sfv.rc
+++ b/resource/quicker_sfv.rc
@@ -115,7 +115,7 @@ BEGIN
     END
     POPUP "&Options",                       65535,MFT_STRING,MFS_ENABLED
     BEGIN
-        MENUITEM "&Update DB",                  ID_OPTIONS_UPDATEDB,MFT_STRING,MFS_ENABLED
+        MENUITEM "Save Configuration",          ID_OPTIONS_SAVECONFIGURATION,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
         MENUITEM "Use AVX512",                  ID_OPTIONS_USEAVX512,MFT_STRING,MFS_GRAYED
     END
